--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -827,9 +827,10 @@ nav ul {
   list-style: none;
   list-style-image: none;
   font-size: 10px;
-  line-height: 12px;
+  line-height: 24px;
 }
 nav ul li {
+  padding: 5px 0px;
   line-height: 10px;
 }
 nav ul li.tag-h1 {
@@ -897,7 +898,15 @@ footer {
     margin: 190px auto 20px;
     max-width: 600px;
   }
-  
+
+  footer {
+    text-align: center;
+    margin: 20px auto;
+    position: relative;
+    left: auto;
+    bottom: auto;
+    width: auto;
+  }
 }
 @media print, screen and (max-width: 720px) {
   body {
